# cropnine

./: README.md  cropping.py  main.py  pyproject.toml
